@@ -4,4 +4,4 @@
 <http://synthv1.sourceforge.net/lv2>
 	a lv2:Plugin, lv2:InstrumentPlugin ;
 	lv2:binary <synthv1.so> ;
-	rdfs:seeAlso <synthv1.ttl> .
+	rdfs:seeAlso <synthv1.ttl>, <synthv1_ui.ttl> .
